<resources>
    <string name="app_name">Task management</string>
    <string name="edtNom">Username</string>
    <string name="edtCon">Enter your password</string>
    <string name="btnCrearCuenta">Create Account</string>
    <string name="btnSalir">Exit application</string>
    <string name="btnRegistrar">Register account</string>
    <string name="tvCrearCuenta">"Create your account "</string>
    <string name="toastRegIncorrecto">You must fill out all fields to register</string>
    <string name="edtCorreo"> Email"</string>
    <string name="toastiniciosesincorrecto">You must fill out the fields to be able to log in.</string>
    <string name="toastCorreoEnUso">This email is already registered</string>
    <string name="HintNombreNuevaTarea">Name of the homework</string>
    <string name="HintDescripcionNuevaTarea">Task description</string>
    <string name="botonAñadir">Add</string>
    <string name="tituloCrearTarea">Create new task</string>
    <string name="chCompleto">Mark as completed</string>
    <string name="mensajeBienvenida">" Welcome to your task manager"</string>
    <string name="tituloFragmentTareas">Things to do</string>
    <string name="toastNombreTarUnico">" Task name must be unique"</string>
    <string name="tvFechaPubDetalle">Publication date:</string>
    <string name="tvPublicadorDetalle">" Publisher by:"</string>
    <string name="opcFragmentTarea">Tasks</string>
    <string name="opcFragmentCuenta">Account</string>
    <string name="opcFragmentAjustes">Settings</string>
    <string name="ModoOscuroPreference">Enable dark mode</string>
    <string name="ReiniciarApp">You must restart the application to apply the changes</string>
    <string name="NombreUsuarioPerfil"> Username:</string>
    <string name="tituloFragmentPerfil">Profile</string>
    <string name="btnIniciarSesion">Log in</string>
    <string name="btnCancelar">Cancel</string>
    <string name="toastErrorInicioSesion">Login error: incorrect email or password</string>
    <string name="toastInicioSesionExitoso">Login successful</string>
    <string-array name="ArraySelecciónIdioma">
        <item>Spanish</item>
        <item>English</item>
    </string-array>
    <string name="tvSeleccionarIdioma">Select language</string>
    <string name="btnAplicarCambios">Apply changes</string>
    <string name="ToastTareaNueva">Task added successfully</string>
    <string name="ToastDescVacio">Description cannot be empty</string>
    <string name="ToastDescModificada">The description has been modified</string>
    <string name="rbOpc1">Domestic</string>
    <string name="rbOpc2">Job</string>
    <string name="rbOpc3">Leisure</string>
    <string name="opcMenuFiltrar">Filter by:</string>
    <string name="OpcMenuNoFiltrar">Do not filter</string>
    <string name="textoGuardarFiltrado">Maintain filtering options</string>
    <string name="btnCompletada">Edit Description</string>
    <string name="opcTipo">Type</string>
    <string name="opcEstado">Status</string>
    <string name="opcCompletas">Completed</string>
    <string name="preferenceCategoryIdioma">Language</string>
    <string name="preferenceCategoryVisualizacion">Visualization</string>
    <string name="preferenceCategoryFiltrado">Filtered</string>
    <string name="ToastEnviarTarea">Please fill out all the fields to send the task</string>
    <string name="ToastPermisos">The application does not have permissions to access media files, please go to privacy settings</string>
    <string name="ToastBorrarTarea">You cannot delete the task because you are not the owner of it</string>
    <string name="toastPermisoDennied">Permissions have been denied</string>
    <string name="tareaCompletada">This task has been completed</string>
    <string name="toastContraseniaMinima">The password must be at least 6 characters</string>

</resources>